# TGVMaxSolution

./: .gitignore  Makefile  README.md  pyproject.toml  render.yaml
app/: config.py  main.py  models.py  utils.py
app/services/: data_loader.py  live_availability.py  live_watch.py  live_watch_plan.py  live_worker.py  navitia.py  planner.py  query_cache.py  sncf_probe.py  sncf_replay.py  zero_watch.py
app/static/: app.js  styles.css
app/templates/: index.html
data/: mountains.json
data/browser-profile/: Local State
data/browser-profile/Default/: Cookies  DIPS  DIPS-wal  Favicons  History  MediaDeviceSalts  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  Secure Preferences  Top Sites  TransportSecurity  Web Data
data/browser-profile/Default/DawnGraphiteCache/: data_1  index
data/browser-profile/Default/DawnWebGPUCache/: data_1  index
data/browser-profile/Default/Extension Rules/: LOG
data/browser-profile/Default/Extension Scripts/: LOG
data/browser-profile/Default/Extension State/: LOG  LOG.old
data/browser-profile/GrShaderCache/: data_1  index
data/browser-profile/GraphiteDawnCache/: data_0  data_1  data_2  index
data/browser-profile/ShaderCache/: data_1  index
data/browser-profile/segmentation_platform/: ukm_db
tests/: conftest.py  test_api.py  test_live_availability.py  test_planner.py  test_sncf_probe.py  test_sncf_replay.py
tools/: inspect_sncf_probe.py  replay_sncf_itineraries.py
tools/sncf_probe_extension/: README.md  background.js  content.js  injected.js  manifest.json  popup.html  popup.js
(+128 files in other folders)
